--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             The best way to start the day, and end the night.</h1>
           <!-- <button type="button" class="btn btn-dark download-button"><i class="fa fa-apple"></i> <small>Download on the <br> <big>App Store</big></button> -->
           <div class="icon-button" style="inset-inline-start:inherit ;">
-          <a href="#"><img class="appstore-img" src="images/app store 2.png" alt="app-store"></a>
-          <a class="btn btn-google  download-button" href="#" title="Google play">Google play</a>
+          <a href="#cta"><img class="appstore-img" src="images/app store 2.png" alt="app-store"></a>
+          <a class="btn btn-google  download-button" href="#cta" title="Google play">Google play</a>
         </div>
         </div>
         
@@ -263,10 +263,10 @@
   <section id="cta">
 
     <h3 class="cta-heading">It's sweet.It's light.It's flaky and buttery.It's right here!</h3>
-    <a href="#"></a>
+    <a href="index.html">
 
-    <img class="appstore-img" src="images/app store 2.png" alt="app-store">
-    <a class="btn btn-google  download-button" href="#" title="Google play">Google play</a>
+      <img class="appstore-img" src="images/app store 2.png" alt="app-store"></a>
+    <a class="btn btn-google  download-button" href="index.html" title="Google play">Google play</a>
 
   </section>
 
